--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "aj-rental",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "name": "aj-taxi-kl",
+  "version": "1.0.0",
+  "description": "Premium Airport Transfer & Chauffeur Service in Kuala Lumpur",
   "dependencies": {
-    "lucide-react": "^0.562.0",
-    "@google/genai": "^1.34.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react": "^19.2.3"
+    "lucide-react": "^0.562.0",
+    "@google/genai": "^1.34.0"
   },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+  "keywords": [
+    "taxi",
+    "klia",
+    "chauffeur",
+    "kuala lumpur",
+    "airport transfer"
+  ],
+  "author": "AJ Private Chauffeur Enterprise"
 }
