--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.3.1",
     "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
+    "marked": "^17.0.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0"
